<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="main_screen_title">Playlist maker</string>
    <string name="search_button_text">Поиск</string>
    <string name="media_library_button_text">Медиатека</string>
    <string name="settings_button_text">Настройки</string>
    <string name="settings_screen_title">Настройки</string>
    <string name="search_screen_title">Поиск</string>
    <string name="theme_switcher">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="license_agreement">Пользовательское соглашение</string>
    <string name="support_mail">skravchenko424@gmail.com</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_text_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="license_agreement_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="share_title">Поделиться через</string>
    <string name="share_link">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="search_hint">Поиск</string>
    <string name="back_arrow_cd">Вернуться назад</string>
    <string name="search_clear_button_cd">Очистить введенный текст</string>
    <string name="please_enter_search_term">Введите текст для поиска</string>
    <string name="url_itunes">https://itunes.apple.com</string>
    <string name="search_reload_button_text">Обновить</string>
    <string name="error_nothing_found">Ничего не нашлось</string>
    <string name="error_network_failure">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету\n</string>
    <string name="historyHeaderText">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="song_duration">Длительность</string>
    <string name="song_album">Альбом</string>
    <string name="song_year">Год</string>
    <string name="song_genre">Жанр</string>
    <string name="song_country">Страна</string>
</resources>