<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/ActivityMainLayoutStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingTop="14dp">

            <ImageView
                android:id="@+id/back_from_search_button"
                android:contentDescription="@string/back_arrow_cd"
                style="@style/BackArrowStyle" />

            <TextView
                android:text="@string/search_screen_title"
                style="@style/ScreenTitleStyle" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp">

            <EditText
                android:id="@+id/etSearch"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:hint="@string/search_hint"
                android:autofillHints="none"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp"
                android:inputType="text"
                android:maxLines="1"
                android:imeOptions="actionSearch"
                android:drawableStart="@drawable/ic_search_icon_16"
                android:drawablePadding="8dp"
                android:drawableTint="@color/search_text_input_elements"
                android:background="@drawable/ic_search_field_background"
                android:backgroundTint="@color/search_text_background"
                android:textColor="@color/search_text"
                android:textColorHint="@color/search_text_input_elements"
                android:textSize="16sp"
                android:fontFamily="@font/ys_display_regular"
                />

            <ImageView
                android:id="@+id/ivClear"
                android:visibility="gone"
                android:tint="@color/search_text_input_elements"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:src="@drawable/ic_search_cross_12"
                android:contentDescription="@string/search_clear_button_cd"
                android:padding="12dp"
                tools:ignore="UseAppTint" />

        </FrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/track_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>